--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.1.0
 Authors@R: person("Dave", "Armstrong", , email="davearmstrong.ps@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9358-2489"))
 Description: Neumayer and Plümper define robustness as the stability of effects between baseline and alternative models.  `nprobust` calculates these stability coefficients from a pair of models. 
-Imports: dplyr, marginaleffects, stats
+Imports: dplyr, insight, marginaleffects, MASS, stats
+Suggests: gamlss
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
