Included variables in exclusion_mods now has Yes and No rather than logical values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(np_robust)
 export(rob_gamlss)
 importFrom(MASS,psi.bisquare)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(insight,get_data)
