Fixed checks for sim_models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(marginaleffects,comparisons)
 importFrom(marginaleffects,datagrid)
 importFrom(marginaleffects,predictions)
 importFrom(marginaleffects,slopes)
+importFrom(stats,alias)
 importFrom(stats,confint)
 importFrom(stats,deviance)
 importFrom(stats,family)
