Added Harry Muttram as package author and bumped point version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: nprobustness
 Type: Package
 Title: Calculates Neumayer-Plümper Robustness
-Version: 0.2.0
-Authors@R: person("Dave", "Armstrong", , email="davearmstrong.ps@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-9358-2489"))
+Version: 0.2.1
+Authors@R: c(person("Dave", "Armstrong", , email="davearmstrong.ps@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-9358-2489")), 
+           person("Harry", "Muttram", , email="hmutt001@ucr.edu", role = c("aut"),
+           comment = c(ORCID = "0009-0001-4241-3204")))
 Description: Neumayer and Plümper define robustness as the stability of effects between baseline and alternative models.  `nprobust` calculates these stability coefficients from a pair of models. 
 Imports: dplyr, insight, marginaleffects, MASS, pbapply, stats
 Suggests: gamlss
