--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person("Dave", "Armstrong", , email="davearmstrong.ps@gmail.com", r
            person("Harry", "Muttram", , email="hmutt001@ucr.edu", role = c("aut"),
            comment = c(ORCID = "0009-0001-4241-3204")))
 Description: Neumayer and Plümper define robustness as the stability of effects between baseline and alternative models.  `nprobust` calculates these stability coefficients from a pair of models. 
-Imports: dplyr, insight, marginaleffects, MASS, pbapply, stats
+Imports: broom, dplyr, insight, marginaleffects, MASS, pbapply, stats
 Suggests: gamlss
 License: MIT + file LICENSE
 Encoding: UTF-8
