--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,22 @@
 S3method(sim_data,glm)
 S3method(sim_data,lm)
 export(exclusion_mods)
+export(get_anova)
 export(ind_robust)
+export(make_ME_mods)
 export(np_robust)
 export(rob_gamlss)
 export(sim_data)
 export(sim_models)
 export(sim_robust)
 importFrom(MASS,psi.bisquare)
+importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(insight,get_data)
@@ -29,7 +33,9 @@ importFrom(pbapply,pblapply)
 importFrom(stats,alias)
 importFrom(stats,complete.cases)
 importFrom(stats,confint)
+importFrom(stats,cor)
 importFrom(stats,deviance)
+importFrom(stats,drop1)
 importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,get_all_vars)
@@ -39,6 +45,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
+importFrom(stats,princomp)
 importFrom(stats,rbinom)
 importFrom(stats,reformulate)
 importFrom(stats,reorder)
@@ -46,5 +53,7 @@ importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(utils,combn)
